--- a/Todo.txt
+++ b/Todo.txt
@@ -5,7 +5,7 @@ CMAKE testen            [ ]
 UML/Programmaufbau      [ ]
 
 HPP erstellen:          [ ]
-    Menu                [ ]
+    Menu                [X]
     Image               [ ]
     gamehandler         [ ]
     MouseHandler        [ ]
@@ -17,7 +17,7 @@ HPP erstellen:          [ ]
     Gui                 [ ]
     
 CPP erstellen:          [ ]
-    Menu                [ ]
+    Menu                [X]
     Image               [ ]
     gamehandler         [ ] 
     MouseHandler        [ ]
