boundingbox.hpp/cpp

--- a/doc/Todo.txt
+++ b/doc/Todo.txt
@@ -4,25 +4,29 @@ CMAKE testen            [X]
 
 HPP erstellen:          [ ]
     Menu                [X]
-    Image               [ ]
+    Image               [X]
+    BoundingBox         [X]
+    Gui                 [X]
     gamehandler         [ ]
     MouseHandler        [ ]
     TimeHandler         [ ]
     gamemode            [ ]
     gamemode1           [ ]
     gamemode2           [ ]
-    Gui                 [ ]
+
 
 CPP erstellen:          [ ]
     Menu                [X]
-    Image               [ ]
+    Image               [X]
+    BoundingBox         [X]
+    Gui                 [X]
     gamehandler         [ ]
     MouseHandler        [ ]
     TimeHandler         [ ]
     gamemode            [ ]
     gamemode1           [ ]
     gamemode2           [ ]
-    Gui                 [ ]
+
     main                [ ]
 
 
